Icon spacing fixes

--- a/src/assets/scss/_elements/_buttons.scss
+++ b/src/assets/scss/_elements/_buttons.scss
@@ -97,6 +97,15 @@
         }
         &.btn--s{
             padding:0 $spacing-s;
+            &.has--icon{
+                padding-left:$spacing-s;
+                svg{
+                    width:16px;
+                    height:16px;
+                    fill:$black;
+                    margin-right:2px;
+                }
+            }
         }
         &.has--loader{
             .btn--inner{
